--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
     </div>
 
 
-    <script src="utils.js"></script>
-    <script src="equation.js"></script>
-    <script src="resizing.js"></script>
-    <script src="menu.js"></script>
-    <script src="algorithms.js"></script>
-    <script src="bundle.js"></script>
-    <script src="generate.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/equation.js"></script>
+    <script src="scripts/resizing.js"></script>
+    <script src="scripts/menu.js"></script>
+    <script src="scripts/algorithms.js"></script>
+    <script src="scripts/bundle.js"></script>
+    <script src="scripts/generate.js"></script>
 </body>
 
 </html>
