--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/buttons.css">
 
     <title>CPRNG based on GLS</title>
 
@@ -116,11 +117,11 @@
 
     <script src="scripts/utils.js"></script>
     <script src="scripts/equation.js"></script>
-    <script src="scripts/resizing.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/algorithms.js"></script>
     <script src="scripts/bundle.js"></script>
     <script src="scripts/generate.js"></script>
+    <script src="scripts/plot.js"></script>
 </body>
 
 </html>
