update readme and html validation

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             where \(K_j \in (0, 255), \; k \in \{1, 2, 3\}, \)\( \; i = 0, 1, 2 \ldots length,\)\( \; j =
                             0, 1, 2 \ldots (3*length+2)\) and \(x_1(i),\: x_2(i),\: x_3(i)\) are the samples of the GLS.
                         </p>
-                        <button id="gen_b" onclick="playAudio('audio/button_click.mp3')">Generate<img src="img/arrow.svg" width="30" height="20"></button>
+                        <button id="gen_b" onclick="playAudio('audio/button_click.mp3')">Generate<img src="img/arrow.svg" alt="arrow" width="30" height="20"></button>
                     </div>
                 </div>
             </div>
